--- a/arquivos/calculo.css
+++ b/arquivos/calculo.css
@@ -14,12 +14,12 @@
 body{
     background: linear-gradient(45deg, rgb(161, 0, 150), rgb(2, 221, 232));
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 h1{
     margin: 0 10px;
@@ -118,4 +118,20 @@ main{
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
+}
+
+@media (max-width: 700px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    h1{
+        font-size: 1.5em;
+        margin-bottom: 50px;
+    }
+     main{
+        max-width: 90vw;
+        max-height: 400px;
+     }
 }
