--- a/arquivos/calculo.css
+++ b/arquivos/calculo.css
@@ -9,32 +9,32 @@
 :root{
     --tabelatransparent: #0000002c;
     --colorRes: #ffffff51;
-    --colornum: linear-gradient(-125deg, rgba(254, 0, 237, 0.367), rgba(0, 242, 255, 0.56));
+    --colornum: linear-gradient(-125deg, rgba(255, 0, 208, 0.356), rgb(0, 242, 255));
 }
 body{
     background: linear-gradient(45deg, rgb(161, 0, 150), rgb(2, 221, 232));
+    background-size: cover ;
+    background-repeat: no-repeat;
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    overflow-x: hidden;
 }
 h1{
-    margin: 0 10px;
+    text-align: center;
+    margin: 10px 0;
     font-family: "Montserrat";
     font-size: 2em;
     color: white;
 }
 main{
-    background: var(--tabelatransparent);
     max-width: 50vw; 
     min-width: 400px; 
     height: 60vh;
     display: flex;
     flex-direction: column;
-    border-radius: 20px;
 }
 .mostrar{
     background: var(--tabelatransparent);
@@ -58,7 +58,7 @@ main{
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
-    border-radius: 10px;
+    border-radius: 10px 10px 3px 3px;
 
 }
 .calculos{
@@ -79,7 +79,7 @@ main{
     background: var(--colornum);
     text-align: center;
     padding: 5px;
-    margin: 5px;
+    margin: 5px ;
 
     font-family: "Montserrat";
     font-size: 1.5em;
@@ -128,10 +128,18 @@ main{
     }
     h1{
         font-size: 1.5em;
+        padding-right: 60px;
         margin-bottom: 50px;
     }
      main{
-        max-width: 80vw;
+        
+        max-width: 80%;
         max-height: 400px;
+     }
+     .mostrar{
+         width: 80%;
+     }
+     .calculos{
+         width: 80%;
      }
 }
