--- a/arquivos/calculo.css
+++ b/arquivos/calculo.css
@@ -130,17 +130,14 @@ main{
         position: absolute;
         left: 50%;
         top: 5%;
-        transform: translateX(-50%);
-
+        transform: translate(-50%, 0);
         font-size: 1.5em;
-        padding-right: 60px;
-        margin-bottom: 50px;
     }
      main{
         position: absolute;
         left: 50%;
         top: 50%;
-        max-width: 80%;
+        max-width: 90%;
         max-height: 400px;
         transform: translate(-50%,-50%);
      }
