--- a/arquivos/main.css
+++ b/arquivos/main.css
@@ -7,130 +7,137 @@
     box-sizing: border-box;
 }
 :root{
-    --tabelatransparent: #0000002c;
-    --colorRes: #ffffff51;
-    --colornum: linear-gradient(-125deg, rgba(255, 0, 208, 0.356), rgb(0, 242, 255));
+    --tabelatransparent: #00000041;
+    --colorRes: #000000ba;
+    --colornum: linear-gradient(-125deg, rgba(0, 0, 0, 0), rgba(232, 109, 2));
 }
-body{
-    background: linear-gradient(45deg, rgb(161, 0, 150), rgb(2, 221, 232));
-    background-size: cover ;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
 
+body{  
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 100vw;
+    min-height: 100vh;
+    
+    background: linear-gradient(45deg, rgb(26, 25, 25), rgb(232, 109, 2));
+    background-size: cover ;
+    background-repeat: no-repeat;
 }
 h1{
-    text-align: center;
     margin: 10px 0;
+
+    text-align: center;
     font-family: "Montserrat";
     font-size: 2em;
     color: white;
 }
 main{
-    max-width: 50vw; 
-    min-width: 300px; 
-    height: 60vh;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+
+    max-width: 50vw; 
+    min-width: 300px;
 }
 .mostrar{
-    background: var(--tabelatransparent);
-    backdrop-filter: blur(10px);
-    width: 100%;
-    height: 120px;
-    border-radius: 20px 20px 0 0;
-
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100px;
+
+    background: var(--tabelatransparent);
+    backdrop-filter: blur(10px);
+    border-radius: 20px 20px 0 0;
 }
 .resultado{
     background: var(--colorRes);
     width: 85%;
     height: 30%;
     text-align: right;
-    padding: 25px;
+    padding: 30px;
     margin-top: 10px;
+    margin-bottom: 5px;
 
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
     border-radius: 10px 10px 3px 3px;
-
 }
 .calculos{
     background: var(--tabelatransparent);
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    height: 100%;
+
     border-radius: 0 0 20px 20px;
-    padding: 0 20px;
+    padding: 0 20px 20px 20px;
 }
 .juncao{
-    width: 100%;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 .limpar{
     background: var(--colornum);
-    text-align: center;
     padding: 5px;
     margin: 5px ;
-
+    
+    text-align: center;
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
 }
 .numeros{
-    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-
     flex-wrap: wrap;
+    width: 100%;
 }
 .numeros > div {
     background: var(--colornum);
-    text-align: center;
     padding: 5px;
     margin: 5px;
-
+    
+    text-align: center;
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
     
 }
 .operadores{
-    width: 20%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    width: 20%;
 }
 .operadores > div {
     background: var(--colornum);
-    text-align: center;
     padding: 5px;
     margin: 5px;
-
+    
+    text-align: center;
     font-family: "Montserrat";
     font-size: 1.5em;
     color: white;
 }
+
+
+
 
 @media (max-width: 800px) {
     body{
         position: relative;
         width: 100vw;
         height: 100vh;
+        overflow-x: hidden;
     }
     h1{
         position: absolute;
         left: 50%;
         top: 5%;
-        transform: translate(-50%, 0);
+        transform: translateX(-50%);
         font-size: 1.5em;
     }
      main{
@@ -138,13 +145,18 @@ main{
         left: 50%;
         top: 50%;
         max-width: 90%;
-        max-height: 400px;
-        transform: translate(-50%,-50%);
+        transform: translate(-45%,-40%);
      }
      .mostrar{
-         width: 80%;
+         width: 90%;
      }
      .calculos{
-         width: 80%;
+         width: 90%;
      }
+}
+
+@media (max-height: 500px) {
+    main{
+        top: 250px;
+    }
 }
