--- a/arquivos/main.css
+++ b/arquivos/main.css
@@ -17,10 +17,11 @@ body{
     justify-content: space-evenly;
     align-items: center;
     width: 100vw;
+    max-height: 130vh;
     min-height: 100vh;
-    
     background: linear-gradient(45deg, rgb(26, 25, 25), rgb(219, 110, 14));
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 h1{
     margin: 10px 0;
@@ -124,7 +125,6 @@ main{
 
 
 
-
 @media (max-width: 800px) {
     body{
         position: relative;
@@ -156,9 +156,6 @@ main{
 }
 
 @media (max-height: 500px) {
-    body{
-        height:120vh;
-    }
     main{
         top: 250px;
     }
